# embedded-pqtls

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  biblio.bib  build.sh  requirements.txt  wolfssl-add-sa.md  wolfssl-dev-log.md
certificates/: CMakeLists.txt  README.md  certgen-openssl.sh
certificates/config/: user_settings.h
certificates/ed25519/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/falcon1024/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/falcon1024-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/falcon512/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/falcon512-mldsa44-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/falcon512-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/ml-dsa-44-chain/: client.crt  int.crt  int.key  root.crt
certificates/ml-dsa-65-chain/: client.key  leaf.key  root.crt  root.key
certificates/ml-dsa-87-chain/: root.key  server-chain.crt
certificates/ml-dsa-mix-chain/: client.crt  int.crt  leaf.key  root.crt
certificates/mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/mldsa44-mldsa44-hqc128-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/mldsa44-mldsa44-mlkem512-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/mldsa65/: client-chain.crt  client.crt  int.crt  int.key  leaf.crt  server-chain.crt
certificates/mldsa65-mldsa65-hqc128-mldsa44/: client.crt  client.key  int.crt  leaf.key  root.crt  server-chain.crt
certificates/mldsa65-mldsa65-hqc128-mldsa44/certs/: client-chain.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/mldsa65-mldsa65-hqc128-mldsa444/: client-chain.crt  int.key  leaf.crt  root.key
certificates/mldsa65-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/mldsa65-mldsa65-mlkem512-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/mldsa87/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt
certificates/mldsa87-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.key  int.key  leaf.crt  root.key  server-chain.crt
certificates/rsa2048/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sha256ecdsa/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs128f-mldsa44-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs128f-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs128s/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs128s-mldsa44-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs128s-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs128s-sphincs128s-hqc128-sphincs128s/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs192s-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/sphincs256s-mldsa65-mldsa44-mldsa44/: client-chain.crt  client.crt  client.key  int.crt  int.key  leaf.crt  leaf.key  root.crt  root.key  server-chain.crt
certificates/src/: certgen.c  pq-certgen.c  tls13client.c  tls13server.c
desktop/: Makefile
pico/: CMakeLists.txt  README.md  requirements.txt
pico/config/: lwipopts.h  user_settings.h
pico/include/pico-pqtls/: colonytcp.h  mozilla-ca.h  tcp.h  utils.h
pico/include/pico-pqtls/cafiles/: ed25519.h  falcon512-mldsa44-mldsa44-mldsa44.h  falcon512.h  mldsa44-mldsa44-hqc128-mldsa44.h  mldsa44-mldsa44-mlkem512-mldsa44.h  mldsa44.h  mldsa65-mldsa65-hqc128.h  mldsa65-mldsa65-mldsa44.h  mldsa65-mldsa65-mlkem512-mldsa44.h  rsa2048-rsa2048-rsa2048.h  sha256ecdsa.h  sphincs128f-mldsa44-mldsa44-mldsa44.h  sphincs128s-mldsa44-mldsa44.h  sphincs128s-sphincs128s-hqc128.h  sphincs128s.h
pico/src/: bench_wolfcrypt.c  colonytcp.c  colors.c  connect_wifi.c  https_client.c  nettime.c  tcp_client.c  tcp_stream.c  test_colonytcp.c  test_tcp_stream.c  tls_client.c
pico/src/common/: colonytcp.c  tcp.c  utils.c  utils.h
server/: CMakeLists.txt  README.md  build.sh  handshake.sh
server-wolfssl/: CMakeLists.txt  README.md  test-cert-chain.sh  test-handshake.sh
server-wolfssl/config/: user_settings.h
server-wolfssl/src/: asn1.c  certgen.c  echoserver.c  hello.c  tcp_bench_client.c  test_addtl_algs.c  tls13client.c  tls13server.c  unittests.c
server/config/: user_settings.h
server/patch-files/: Dockerfile
server/src/: certgen.c  test.c  tls13client.c  tls13server.c
(+27 files in other folders)
